--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="./id-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My portfolio" />
+    <meta property="og:description" content="My portfolio" />
     <meta
-      name="image"
+      property="og:image"
       content="file:///Users/idadanielsson/Desktop/ida-danielsson-portfolio.png"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
