--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" href="./id-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:description" content="My portfolio" />
+    <meta
+      property="og:description"
+      content="My name is Ida Danielsson! I’m an ambitious and creative web
+    developer student specializing in e-commerce."
+    />
     <meta
       property="og:image"
-      content="file:///Users/idadanielsson/Desktop/ida-danielsson-portfolio.png"
+      content="https://idadanielsson.com/assets/ida-danielsson-portfolio.png"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
