--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     developer student specializing in e-commerce."
     />
     <meta
+      name="image"
       property="og:image"
       content="https://idadanielsson.com/assets/ida-danielsson-portfolio.png"
     />
