--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-73G45GDQMC");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="./id-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -35,6 +44,10 @@
       href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap"
       rel="stylesheet"
     />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-73G45GDQMC"
+    ></script>
 
     <title>Ida Danielsson</title>
   </head>
